tests/baselines/reference/ts-ignore.errors.txt
tests/cases/conformance/directives/ts-ignore.ts(7,5): error TS2322: Type '"nope"' is not assignable to type 'number'.


==== tests/cases/conformance/directives/ts-ignore.ts (1 errors) ====
    // @ts-ignore
    var ignoredCommented: number = 'nope';
    
    // @ts-ignore
    var validCommented: string = 'nope';
    
    var invalidPlain: number = 'nope';
        ~~~~~~~~~~~~
!!! error TS2322: Type '"nope"' is not assignable to type 'number'.
    
    var validPlain: string = 'nope';
    